--- a/Bingstagram/Base.lproj/Main.storyboard
+++ b/Bingstagram/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NdW-Nf-EE3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NdW-Nf-EE3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -49,7 +49,13 @@
                             <outlet property="delegate" destination="i3K-vB-4Cj" id="yZK-ak-3vL"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="oUm-dS-ogI"/>
+                    <navigationItem key="navigationItem" id="oUm-dS-ogI">
+                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="Aco-7j-ogj">
+                            <connections>
+                                <action selector="showConnectionPrompt:" destination="i3K-vB-4Cj" id="OZL-IK-Ur3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EVb-VE-DsC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
