--- a/Bingstagram/Base.lproj/Main.storyboard
+++ b/Bingstagram/Base.lproj/Main.storyboard
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Billabong.ttf">
+            <string>Billabong</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="WAQ-wb-HJf">
@@ -50,11 +55,19 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="oUm-dS-ogI">
+                        <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" systemItem="add" id="Aco-7j-ogj">
                             <connections>
                                 <action selector="showConnectionPrompt:" destination="i3K-vB-4Cj" id="OZL-IK-Ur3"/>
                             </connections>
                         </barButtonItem>
+                        <textField key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Bingstagram" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" id="qtF-It-aIL">
+                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="54"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" name="Billabong" family="Billabong" pointSize="40"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                     </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EVb-VE-DsC" userLabel="First Responder" sceneMemberID="firstResponder"/>
